tests/fiaas_deploy_daemon/e2e_expected/multiple_networkingv1-ingress_default_host2.yml

# Copyright 2017-2021 The FIAAS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "true"
    foo/ingress-class: "internal"
  labels:
    app: v3-data-examples-multiple-ingress-default-host
    fiaas/deployed_by: ""
    fiaas/deployment_id: DEPLOYMENT_ID
    fiaas/version: VERSION
  name: v3-data-examples-multiple-ingress-default-host-1
  namespace: default
  ownerReferences:
    - apiVersion: fiaas.schibsted.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Application
      name: v3-data-examples-multiple-ingress-default-host
  finalizers: []
spec:
  tls: []
  rules:
  - host: internal.example.com
    http:
      paths:
      - backend:
          service:
            name: v3-data-examples-multiple-ingress-default-host
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
